# Homework_Software_Integration_2022

./: LICENSE  README.md
Date servers - Part I/node_server/: app.js
Date servers - Part I/python_server/: main.py  pyproject.toml
Date servers - Part II/node_server/: app.js  package.json  swagger.json
Date servers - Part II/python_server/: main.py  pyproject.toml
data_format_translation_server_homework/node-server/: app.js  birds.txt  package.json
data_format_translation_server_homework/python-server/: birds.csv  birds.xml  birds.yaml  main.py  pyproject.toml
file_format_homework/: birds.json  birds.txt  filereader.js  filereader.py
